--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mmpdb"]
+[submodule "backend/matcher-mmpdb"]
 	path = backend/mmpdb
-	branch = opensource
+	url = https://github.com/Merck/matcher-mmpdb
