--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+.vscode
 *.pyc
 debug.log
 .ipynb_checkpoints/
@@ -6,3 +7,5 @@ KRAS_210628_amines_wSoly_1.csv
 t2.html
 tests/
 .DS_Store
+.venv
+.env
