--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - POSTGRES_DB=default
       - POSTGRES_HOST=database
       - POSTGRES_PORT=5432
+      - RUN_TESTS
     depends_on:
       - database
     networks:
@@ -35,6 +36,7 @@ services:
       - MATCHER_BACKEND_URL=http://backend:8001
       - EXTERNAL_BACKEND_URL=http://localhost:8001
       - EXTERNAL_FRONTEND_URL=http://localhost:8000
+      - RUN_TESTS
     depends_on:
       - backend
     networks:
