Make matcher dir the build context for docker images
- Refactor frontend imports as result, also to facilitate pytest testing
- Will facilitate importing shared files (e.g. scripts) to both backend and frontend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,11 +6,11 @@ RUN apt-get update -y && apt-get install libxrender1 -y
 
 WORKDIR /opt
 
-COPY environment.yml requirements.txt ./backend/
+COPY ./backend/environment.yml ./backend/requirements.txt ./backend/
 
 RUN conda env create -f ./backend/environment.yml
 
-COPY . ./backend
+COPY ./backend ./backend
 
 EXPOSE 8001
 
