Add wait-for-it script
- Will help coordinate docker container startup and testing

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,7 @@ COPY ./backend/environment.yml ./backend/requirements.txt ./backend/
 RUN conda env create -f ./backend/environment.yml
 
 COPY ./backend ./backend
+COPY ./scripts ./scripts
 
 EXPOSE 8001
 
