--- a/.github/workflows/matcher_ci.yml
+++ b/.github/workflows/matcher_ci.yml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: recursive
 
     - name: Build Matcher images
       run: docker compose build
